--- a/Hotel/styles.css
+++ b/Hotel/styles.css
@@ -4,7 +4,12 @@ body {
     padding: 0;
     text-align: center;
 }
-
+header img {
+    border-radius: 50%;
+    height: 120px;
+    width: 120px;
+    object-fit: cover;
+}
 header {
     background-color: #333;
     color: white;
@@ -48,4 +53,23 @@ footer {
     color: white;
     padding: 10px;
     margin-top: 20px;
+}
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+.mySlides {
+    display: none;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
 }
