--- a/Hotel/stylesHabitaciones.css
+++ b/Hotel/stylesHabitaciones.css
@@ -91,10 +91,7 @@ section {
 
 footer {
     background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+    color: white;
+    padding: 10px;
+    margin-top: 20px;
 }
