--- a/Hotel/styles.css
+++ b/Hotel/styles.css
@@ -121,6 +121,18 @@ section {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.iconos-contacto {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.iconos-contacto img {
+    width: 40px;
+    height: 40px;
+}
+
 footer {
     background-color: #333;
     color: rgb(255, 255, 255);
