--- a/Hotel/styles.css
+++ b/Hotel/styles.css
@@ -121,6 +121,12 @@ section {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+#contacto {
+    background-color: #ffffff;
+    color: #000000;
+    padding: 20px 0;
+}
+
 .iconos-contacto {
     display: flex;
     justify-content: center;
