pagina de reservacion completa

--- a/Hotel/stylesReservación.css
+++ b/Hotel/stylesReservación.css
@@ -149,6 +149,6 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    position: botton;
+    position: bottom;
     width: 100%;
     bottom: 0;}
