--- a/Hotel/styles.css
+++ b/Hotel/styles.css
@@ -141,14 +141,12 @@ section {
 
 footer {
     background-color: #333;
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    margin-top: 20px;
-}
-
-footer p {
-    margin: 0;
-}
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: bottom;
+    width: 100%;
+    bottom: 0;}
 
 .slideshow-container {
     max-width: 800px;
