--- a/Hotel/stylesServicios.css
+++ b/Hotel/stylesServicios.css
@@ -7,38 +7,92 @@ body {
 
 header {
     background-color: #333;
-    color: white;
+    color: rgb(244, 244, 244);
     padding: 1em;
+    display: flex; /* Añadido para usar flexbox */
+    justify-content: center; /* Centra el contenido horizontalmente */
+    align-items: center; /* Alinea verticalmente el contenido */
+}
+header div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 20px; /* Añade margen a los lados del div para espaciar */
+}
+
+header img {
+    border-radius: 50%;
+    height: 120px;
+    width: 120px;
+    object-fit: cover;
+    margin-bottom: 10px; /* Ajusta el margen según sea necesario */
+}
+
+header h1 {
+    padding: 10px 20px;
+    border: 2px solid #ffffff;
+    letter-spacing: 3px; 
+    font-weight: bold;
+    margin: 10px 0;
+    text-align: center; /* Asegura que el texto dentro del h1 esté centrado */
 }
 
 nav ul {
     list-style: none;
     padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center; /* Centra los elementos de la navegación */
 }
-
 nav ul li {
-    display: inline;
     margin: 0 15px;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
 }
 
 section {
     padding: 20px;
 }
 
-.habitacion {
-    border: 1px solid #ddd;
-    margin: 10px;
-    padding: 15px;
+#contacto {
+    background-color: #ffffff;
+    color: #000000;
+    padding: 20px 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#contacto p {
+    margin: 5px 0;
+}
+
+.iconos-contacto {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.iconos-contacto img {
+    width: 40px;
+    height: 40px;
 }
 
 footer {
     background-color: #333;
-    color: white;
-    padding: 10px;
-    margin-top: 20px;
-}
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: bottom;
+    width: 100%;
+    bottom: 0;}
