--- a/Hotel/stylesHabitaciones.css
+++ b/Hotel/stylesHabitaciones.css
@@ -65,34 +65,62 @@ section {
 }
 
 .habitacion {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    margin: 20px auto;
-    padding: 20px;
-    max-width: 800px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    border: 1px solid #ddd;
+    margin: 15px auto; /* Centra el contenedor de la habitación */
+    padding: 10px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+    max-width: 1000px; /* Ajusta el ancho máximo */
 }
 
 .habitacion img {
-    max-width: 200px;
-    margin-right: 20px;
+    width: 200px; /* Tamaño de la imagen */
+    height: auto;
+    border-radius: 5px; /* Bordes redondeados */
+}
+
+.habitacion .info {
+    flex: 1; /* Ocupar el espacio disponible */
+    text-align: center;
+    padding: 0 20px;
+}
+
+.habitacion .precio {
+    text-align: center;
+    padding: 10px;
+}
+.boton-reserva {
+    display: inline-block;
+    background-color: #333;
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
     border-radius: 5px;
 }
 
-.habitacion h3 {
-    margin-top: 0;
+
+.iconos {
+    display: flex;
+    gap: 10px;
 }
 
+.iconos img {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
 .precio {
     text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .precio p {
-    margin: 5px 0;
+    margin: px 0;
 }
 
 .precio button {
@@ -103,7 +131,6 @@ section {
     cursor: pointer;
     border-radius: 5px;
 }
-
 #contacto {
     background-color: #ffffff;
     color: #000000;
